--- a/Hotaru/Shared/StaffNavMenu.razor
+++ b/Hotaru/Shared/StaffNavMenu.razor
@@ -17,6 +17,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Customer Management
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/staff/offlinebooking">
+                <span class="oi oi-plus" aria-hidden="true"></span> Offline Booking
+            </NavLink>
+        </li>
     </ul>
 </div>
 
