--- a/Hotaru/Shared/ManagerNavMenu.razor
+++ b/Hotaru/Shared/ManagerNavMenu.razor
@@ -37,6 +37,11 @@
                 <span class="oi oi-calculator" aria-hidden="true"></span> Data Report
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/manager/offlinebooking">
+                <span class="oi oi-calculator" aria-hidden="true"></span> Offline Booking
+            </NavLink>
+        </li>
     </ul>
 </div>
 
